--- a/Legacy-decrypt.html
+++ b/Legacy-decrypt.html
@@ -193,7 +193,7 @@
                     <button onclick="decryptMessage()">Decrypt</button>
 
                     <h3>Decrypted Seed Phrase:</h3>
-                    <p id="decryptedText"></p>
+                    <p id="decryptedText" style="overflow-wrap: break-word"></p>
                 </div>
                 <div style="height: 10vh"></div>
                 <h2>Donations</h2>
