--- a/Legacy-encrypt.html
+++ b/Legacy-encrypt.html
@@ -155,7 +155,7 @@
                             Please read the
                             <a href="how-it-works.html">HOW-IT-WORKS</a> page
                             and the <a href="benefits.html">BENEFITS</a> page
-                            before using
+                            before using it offline.
                         </li>
                         <li>
                             Check the expected functionality of your keys using
@@ -261,7 +261,7 @@
                     ></textarea>
                     <button onclick="encryptMessage()">Encrypt</button>
                     <h3>Encrypted Seed Phrase:</h3>
-                    <p id="ciphertext"></p>
+                    <p id="ciphertext" style="overflow-wrap: break-word"></p>
                 </section>
             </div>
             <div style="height: 10vh"></div>
