upgraded the encryption protocol

--- a/how-it-works.html
+++ b/how-it-works.html
@@ -9,6 +9,10 @@
             header {
                 background-image: url("background.png");
             }
+
+            ol li {
+                margin-top: 20px;
+            }
         </style>
     </head>
     <body>
@@ -28,7 +32,7 @@
             </nav>
             <div style="height: 200px"></div>
             <h1>How It Works...</h1>
-            <div class="container">
+            <div class="container" style="margin-bottom: 0">
                 <ol style="margin-top: 100px">
                     <li>
                         The Benefactor uses Legacy's encryption system to
@@ -54,17 +58,19 @@
                     </li>
                 </ol>
             </div>
-            <div style="height: 30px"></div>
-            <div class="button-container">
-                <a href="Legacy-encrypt.html" class="learn-more-button">
-                    Try It Out
-                </a>
+            <div class="content">
+                <div style="height: 30px"></div>
+                <div class="button-container">
+                    <a href="encrypt3.html" class="learn-more-button">
+                        Try It Out
+                    </a>
+                </div>
+                <div style="height: 200px"></div>
+                <footer>
+                    Legacy - Encryption and Consulting. <br />All Rights
+                    Reserved 2025.
+                </footer>
             </div>
-            <div style="height: 200px"></div>
-            <footer>
-                Legacy - Encryption and Consulting. <br />All Rights Reserved
-                2025.
-            </footer>
         </header>
 
         <!-- JavaScript for toggling navbar -->
