--- a/index.html
+++ b/index.html
@@ -28,20 +28,23 @@
             <h3 style="margin-top: 20px">Encryption and Consulting</h3>
 
             <div style="height: 80px"></div>
-            <h3>
-                We are the Bitcoin inheritance solution you've been looking for.
-            </h3>
-            <div style="height: 30px"></div>
-            <div class="button-container">
-                <a href="how-it-works.html" class="learn-more-button">
-                    Learn More
-                </a>
+            <div class="content">
+                <h3>
+                    We are the Bitcoin inheritance solution you've been looking
+                    for.
+                </h3>
+                <div style="height: 30px"></div>
+                <div class="button-container">
+                    <a href="how-it-works.html" class="learn-more-button">
+                        Learn More
+                    </a>
+                </div>
+                <div style="height: 80px"></div>
+                <footer>
+                    Legacy - Encryption and Consulting. <br />All Rights
+                    Reserved 2025.
+                </footer>
             </div>
-            <div style="height: 80px"></div>
-            <footer>
-                Legacy - Encryption and Consulting. <br />All Rights Reserved
-                2025.
-            </footer>
         </header>
 
         <!-- JavaScript for toggling navbar -->
