--- a/mission.html
+++ b/mission.html
@@ -9,6 +9,16 @@
             header {
                 background-image: url("background.png");
             }
+
+            footer {
+                margin-top: 180px;
+            }
+
+            @media (max-width: 768px) {
+                footer {
+                    margin-top: auto;
+                }
+            }
         </style>
     </head>
     <body>
@@ -40,7 +50,7 @@
                 </p>
             </div>
 
-            <div style="height: 100vh"></div>
+            <div style="height: 150px"></div>
             <footer>
                 Legacy - Encryption and Consulting. <br />All Rights Reserved
                 2025.
