deleted old files

--- a/encrypt.html
+++ b/encrypt.html
@@ -59,7 +59,7 @@
                     </p>
                     <p>
                         Check the expected functionality of your keys using the
-                        <a href="decrypt3.html">DECRYPT</a> page.
+                        <a href="decrypt.html">DECRYPT</a> page.
                     </p>
                     <div style="height: 10vh"></div>
                     <label for="benefactorKey">Benefactor Key:</label><br />
