--- a/how-it-works.html
+++ b/how-it-works.html
@@ -61,7 +61,7 @@
             <div class="content">
                 <div style="height: 30px"></div>
                 <div class="button-container">
-                    <a href="encrypt3.html" class="learn-more-button">
+                    <a href="encrypt.html" class="learn-more-button">
                         Try It Out
                     </a>
                 </div>
