--- a/how-it-works.html
+++ b/how-it-works.html
@@ -35,8 +35,9 @@
             <div class="container" style="margin-bottom: 0">
                 <ol style="margin-top: 100px">
                     <li>
-                        The Benefactor uses Legacy's encryption system to
-                        generate a key pair and encrypt their seed phrase.
+                        The Benefactor downloads the necessary files for
+                        Legacy's encryption system and uses it to generate a key
+                        pair and encrypt their seed phrase offline.
                     </li>
                     <li>One key is given to the Beneficiary to keep safe.</li>
                     <li>
