--- a/encrypt.html
+++ b/encrypt.html
@@ -51,7 +51,7 @@
                 <div style="margin: auto; width: 80%">
                     <p>
                         DO NOT ENTER YOUR ACTUAL SEED PHRASE. <br />
-                        This offline version is for demonstration purposes only.
+                        This online version is for demonstration purposes only.
                     </p>
                     <p>
                         Please read the HOW-IT-WORKS page and the BENEFITS page
