source code surprise

--- a/encrypt.html
+++ b/encrypt.html
@@ -1,3 +1,7 @@
+/* ***Congradulations! You're one of the few people that knows how to view
+source code. ***I hope you are here to vet the security of my encryption
+program. ***I have included useful comments throughout the code to explain the
+protocol. ***Enjoy! */
 <!doctype html>
 <html>
     <head>
@@ -103,6 +107,7 @@
                 menu.classList.toggle("active"); // Toggle the 'active' class
             });
         </script>
+        <!-- Here's the good stuff! -->
         <script>
             // Function to convert string to array buffer
             function strToArrayBuffer(str) {
