--- a/benefits.html
+++ b/benefits.html
@@ -59,6 +59,10 @@
                         A working copy of Legacy is also necessary to decrypt
                         the seed phrase.
                     </li>
+                    <li>
+                        Use this tool in conjunction with a deadman switch to
+                        deliver the Benefactor Key.
+                    </li>
                 </ol>
             </div>
             <div style="height: 50px"></div>
