--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
             <div style="height: 80px"></div>
             <div class="content">
                 <h3>
-                    We are the Bitcoin inheritance solution you've been looking
-                    for.
+                    The Bitcoin inheritance solution you've been looking for.
                 </h3>
                 <div style="height: 30px"></div>
                 <div class="button-container">
